# desafio-tecnico-autou

./: .env  .env.docker.example  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml
backend/app/api/v1/: emails.py
backend/app/core/: config.py  database.py
backend/app/integrations/: ai.py
backend/app/models/: email.py
backend/app/repositories/: email_repository.py
backend/app/schemas/: email.py
backend/app/services/: ai.py  email_service.py
backend/app/utils/: file_processor.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: email-api.ts
frontend/src/components/main/: MainComponent.css  MainComponent.tsx
frontend/src/components/modal/: ModalComponent.tsx
frontend/src/pages/: MainPage.tsx
